fixed font on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -56,7 +56,7 @@ h1 {
 
 @media screen and (min-width: 321px) and (max-width: 699px) {
   h1 {
-    font-size: 2.3rem;
+    font-size: 1.2rem;
   }
   p {
     font-size: 0.8rem;
